--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,9 @@ add_executable(${EXECUTABLE} ${SOURCE_LIST} ${STARTUP_BASE_DIR}/${SERIES_FOLDER}
         SevenSegment/SevenSegments.h
         SevenSegment/SevenSegments.c
         LCD/LCD.h
-        LCD/LCD.c)
+        LCD/LCD.c
+        src/main.c
+        src/speed_main.c)
 # Include
 target_include_directories(${EXECUTABLE} PUBLIC ${INCLUDE_LIST})
 # Project symbols
